# ndpolator

./: .gitignore  MANIFEST.in  README.md  build_docs.sh  pyproject.toml  setup.py  update_version.sh
.github/: dependabot.yml
.github/workflows/: docbuild.yml  on_pr.yml  on_release.yaml
benchmarks/: benchmark_kdtree_speedup.py  benchmark_kdtree_speedup_fine.py  benchmark_ndpolator_methods.py
docs/: Doxyfile  build_docs.sh  filter.py  gh2doxy.py  ndpolator.md  paper.bib  paper.md  python_tutorial.md  update_version.sh
ndpolator/: __init__.py  ndpolator.py
src/: ndp_py.c  ndp_py.h  ndp_types.c  ndp_types.h  ndpolator.c  ndpolator.h
tests/: test_exceptions.py  test_extrapolation.py  test_interp.py  test_kdtree_integration.py  test_ndp_distance.py
